# rust-codegen-win32-issue

./: Cargo.toml  build.rs
.github/workflows/: CI.yaml
c-bin/: main.c  rust.h
c-ffi/: ffi.c  ffi.h
src/: lib.rs  main.rs
