[package]
authors = ["LongYinan <longyinan.brooklyn@bytedance.com>"]
edition = "2018"
name = "rust-codegen-win32"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[build-dependencies]
cc = "1"

[profile.release]
lto = true
